@@ -53,6 +53,8 @@ Bugfixes
    * Only use post capture when we setup to record videos with external pipe or ffmpeg. (Angel Carpintero)   
    * Fix introduced bug for Content-Lenght = 0 in svn r476. (Angel Carpintero)
    * Avoid segfault when motion cannot create a logfile. (Angel Carpintero)
+   * No mysql_close
+     http://www.lavrsen.dk/foswiki/bin/view/Motion/BugReport2010x11x22x033859
 
 3.2.12 Summary of Changes
 
